    been replaced by "breaks". A new argument "labels" allow to define 
    better suited labels for age specific levels.
  * LeveneTest() has been given the same interface as similar functions in 
    base R (as ansari.test or kruskal.test). lm-interface has been defunct.
  * Format() looses the two predefined formats for displaying confidence 
    intervals, fmt="ci" and fmt="ci%".

    
BUGFIXES:
  * DoBy() ignored provided names for the new created variables. 
  * Corrected several typos in names (Quesenberry, Jeffreys). 
    (Credit to musvaage in https://github.com/AndriSignorell/DescTools/pull/169)
  * ICC() no longer fails when "type" argument is set to anything other 
    than "all". (Credit to Alphonse Kwizera)
  * PercentRank() now subtracts 1 in nominator and denominator ensuring
    the scale runs from 0 to 1.  
  * ToLong() does not try to replace non existing rownames anymore. 
  * SiegelTukeyRank() works numerically more robust (Credits to speegled, 
      https://github.com/AndriSignorell/DescTools/issues/171 )
  * CCC() yields the same classes of results independently of the definition of
    na.rm. (Credits go to abichat, 
      https://github.com/AndriSignorell/DescTools/issues/172)
  * CohenD's confidence intervals were too small, when using the Hedges correction.

  
DEFUNCT:
  * OddsRatio.multinom() has been moved to the package ModTools, where it 
    better fits.
  * ReadSPSS() has been replaced by ToBaseR(), which is more general.  
    
    

DescTools 0.99.60 (2025-03-28)
------------------------------

NEW FUNCTIONS ADDED:
  * Downloads() helperfunction for a fast access to downloaded 
    XL- or data files.
  * Moment functions for the most common distributions.

UPDATED FUNCTIONS:
  * FisherZ() and FisherZInv() use atanh(), resp. tanh() now.
    (Credits to Daniel Wollschlaeger)
  * Year(), Week(), YearWeek() have been recoded in C++ and now run 
    4-10 times faster.