@@ -1,8 +1,8 @@
 Package: DescTools
 Type: Package
 Title: Tools for Descriptive Statistics
-Version: 0.99.60.17
-Date: 2025-08-11
+Version: 0.99.60.18
+Date: 2025-08-12
 Authors@R: c(
   person(given="Andri", family="Signorell", 
          email = "andri@signorell.net", 
