@@ -4315,6 +4315,15 @@ ToWide <- function(x, g, by=NULL, varnames=NULL){
   }
   
   res <- Reduce(function(x, y) {
+    
+    # overwrite the last column name, in order to avoid:
+    # Warning message:
+    #   In merge.data.frame(x, y, by = by, all.x = TRUE, all.y = TRUE) :
+    #   column names 'y.x', 'y.y' are duplicated in the result
+    
+    if(inherits(x, "data.frame"))  
+      colnames(x)[ncol(x)] <- paste0(colnames(x)[ncol(x)-1], "y")
+    
     z <- merge(x, y, by=by, all.x=TRUE, all.y=TRUE)
     # kill the rownames
     if(by=="row.names") z <- z[, -grep("Row.names", names(z))]
@@ -4325,6 +4334,7 @@ ToWide <- function(x, g, by=NULL, varnames=NULL){
   return(res)
 
 }
+
 
 
 
