@@ -25,6 +25,8 @@ UPDATED FUNCTIONS:
     base R (as ansari.test or kruskal.test). lm-interface has been defunct.
   * Format() looses the two predefined formats for displaying confidence 
     intervals, fmt="ci" and fmt="ci%".
+  * Agree has been fundamentally rewritten to act more robust depending
+    on the structure of the provided data.
 
     
 BUGFIXES:
